# python-web-development-project

./: .flake8  .gitignore  README.md  pyproject.toml
apps/task_mg/: apps.py
config/: settings.py
