[tool.poetry]
name = "web-project"
version = "0.1.0"
description = ""
authors = ["Alex <alexkravchenko116@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
